# Projex

./: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml
docker/: app.yaml  mongo-express.yaml  mongo.yaml
src/: main.py
src/api/: main.py
src/api/dependencies/: containers.py
src/api/projects/: filters.py  handlers.py  schemas.py
src/domain/entities/: base.py  project.py  projects.py
src/domain/events/: project.py  projects.py
src/domain/exceptions/: base.py  project.py  projects.py
src/domain/values/: project.py  projects.py
src/domain/values/enums/: projects.py
src/infra/repositories/projects/: base.py
src/infrastructure/repositories/: projects.py
src/infrastructure/repositories/filters/: projects.py
src/infrastructure/repositories/projects/: base.py  converters.py  memory.py  mongo.py
src/logic/: init.py  mediator.py
src/logic/commands/: base.py  project.py  projects.py
src/logic/events/: base.py
src/logic/exceptions/: base.py  mediator.py  project.py  projects.py
src/logic/queries/: base.py  projects.py
src/settings/: __init__.py  general.py  mongo.py
src/tests/: conftest.py  fixtures.py
src/tests/api/: conftest.py  test_projects.py
src/tests/domain/values/: test_projects.py
src/tests/logic/: test_projects.py
